--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.InovationMobile">
         <activity
+            android:name=".activities.ListInovasiActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="fullSensor"/>
+        <activity
+            android:name=".activities.ListInovatorActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
             android:name=".activities.MainActivity"
-            android:screenOrientation="fullSensor"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="fullSensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
