--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.project.inovationmobile">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,19 +15,52 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.InovationMobile">
         <activity
+            android:name=".activities.InovatorDetailActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.ListInovatorActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activities.InovasiDetailActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.PetaActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.SearchInovatorActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.ListInovatorActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.SearchInovasiActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.ListInovasiActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.NoInternetActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activities.ListInovasiActivity"
             android:exported="false"
             android:parentActivityName=".activities.MainActivity"
-            android:screenOrientation="fullSensor"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.ListInovatorActivity"
             android:exported="false"
             android:parentActivityName=".activities.MainActivity"
-            android:screenOrientation="fullSensor" />
+            android:screenOrientation="portrait" />
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.SplashScreenActivity"
             android:exported="true"
-            android:screenOrientation="fullSensor">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
