--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:theme="@style/Theme.InovationMobile">
         <activity
             android:name=".activities.InstansiDetailActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".activities.InovasiDetailActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.InovatorDetailActivity"
             android:exported="false"
@@ -25,7 +27,7 @@
         <activity
             android:name=".activities.InovasiDetailActivity"
             android:exported="false"
-            android:parentActivityName=".activities.MainActivity"
+            android:parentActivityName=".activities.ListInovasiActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activities.PetaActivity"
