--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.codesgood:justifiedtextview:1.1.0'
     implementation 'com.github.captain-miao:optroundcardview:1.0.0'
+    implementation 'com.android.volley:volley:1.1.1'
 }
