--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,19 @@
             android:exported="false"
             android:parentActivityName=".activities.MainActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activities.SortListCategory_InovasiActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activities.SortListCategory_InovatorActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="portrait" />
+
         <activity
             android:name=".activities.SplashScreenActivity"
             android:exported="true"
