--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     implementation 'com.codesgood:justifiedtextview:1.1.0'
     implementation 'com.github.captain-miao:optroundcardview:1.0.0'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
