--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     implementation 'com.github.captain-miao:optroundcardview:1.0.0'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.Spikeysanju:MotionToast:1.4'
 }
