--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.Spikeysanju:MotionToast:1.4'
+    implementation 'com.jcodecraeer:xrecyclerview:1.6.0'
 }
