--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,11 @@
             android:parentActivityName=".activities.MainActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".activities.SortYearCategory_InovasiActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activities.SplashScreenActivity"
             android:exported="true"
             android:screenOrientation="portrait">
